src/objects/Tessuto_Colore__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <formula>TEXT(Stagione__r.Categoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Colore__c</fullName>
        <label>Codice Colore</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Tessuto_Colore__c</fullName>
        <formula>Tessuto__r.Codice__c &amp; &quot;-&quot; &amp; Codice_Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Tessuto Colore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Colore__c</fullName>
        <label>Descrizione Colore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANTRACITE</fullName>
                </value>
                <value>
                    <fullName>ANTRACITE/CRUMBLE/SASSO</fullName>
                </value>
                <value>
                    <fullName>ARDESIA</fullName>
                </value>
                <value>
                    <fullName>BLU</fullName>
                </value>
                <value>
                    <fullName>BLU COLORATO</fullName>
                </value>
                <value>
                    <fullName>CABERNET</fullName>
                </value>
                <value>
                    <fullName>CAMEL</fullName>
                </value>
                <value>
                    <fullName>CAMEL/CRUMBLE/CABERNET</fullName>
                </value>
                <value>
                    <fullName>DENIM</fullName>
                </value>
                <value>
                    <fullName>GRGIO MEDIO</fullName>
                </value>
                <value>
                    <fullName>GRIGIO</fullName>
                </value>
                <value>
                    <fullName>GRIGIO CHIARO</fullName>
                </value>
                <value>
                    <fullName>GRIGIO MEDIO</fullName>
                </value>
                <value>
                    <fullName>GRIGIO SCURO</fullName>
                </value>
                <value>
                    <fullName>MARRONE</fullName>
                </value>
                <value>
                    <fullName>MIELE</fullName>
                </value>
                <value>
                    <fullName>NAVY</fullName>
                </value>
                <value>
                    <fullName>NAVY MELANGE</fullName>
                </value>
                <value>
                    <fullName>NERO</fullName>
                </value>
                <value>
                    <fullName>SABBIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descrizione_Tessuto__c</fullName>
        <formula>Tessuto__r.Descrizione_Tessuto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Tessuto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disponibilit_Magazzino_Reale_metri__c</fullName>
        <formula>Disponibilit_Magazzino_metri__c -  Ordinato_metri__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disponibilità Magazzino Reale (metri)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disponibilit_Magazzino_metri__c</fullName>
        <label>Disponibilità Magazzino (metri)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nome_Stagione__c</fullName>
        <formula>Stagione__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Stagione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordinato_metri__c</fullName>
        <label>Ordinato (metri)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peso_tessuto__c</fullName>
        <formula>Tessuto__r.Peso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peso tessuto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ricalcola_Ordinato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ricalcola Ordinato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stagione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stagione</label>
        <referenceTo>Stagione__c</referenceTo>
        <relationshipLabel>Tessuti - Colori</relationshipLabel>
        <relationshipName>Tessuti_Colori</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tessuto__c</fullName>
        <label>Tessuto</label>
        <referenceTo>Tessuto__c</referenceTo>
        <relationshipLabel>Tessuti - Colori</relationshipLabel>
        <relationshipName>Tessuti_Colori</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tessuto - Colore</label>
    <nameField>
        <label>Tessuto - Colore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tessuti - Colori</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>